--- a/MODULO_2/JS_C1/work_class/README
+++ b/MODULO_2/JS_C1/work_class/README
@@ -6,7 +6,7 @@
 2. Entregas de Tareas: La entrega de las tareas se hace por el chat interno (tarea #1-variables Denis Sabino)
 - Siempre les doy una retroalimentacion de la entrega
 - Siempre les respondere ya sea en el mismo dia o al siguiente
-- Enviar las tareas en pantallazos
+- Enviar las tareas en pantallazos con imagen
 
 ## Tutorias
 - Las tutorias martes y jueves (Discord -> El link esta en whatsaap)
